설문조사 인규님 - 리스트 페이지 수정